# household-pulse

./: .bumpversion.cfg  .gitattributes  .gitignore  Dockerfile  README.md  analysis.py  app.py  datascript.py  dev-environment.yml  dev-requirements.txt  environment.yml  etl.py  eviction_data_modelling.py  exploration.ipynb  hps_puf_exploration.Rmd  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  python-package.yml
archive/: analysis.py  etl.py  exploration.ipynb
data/: question_mapping.csv  response_mapping.csv
dev/: Crosstab_Workflow.ipynb  etl.py  eviction_data_modelling.py  exploration.ipynb  generate_crosstabs.py
household_pulse/: __main__.py  downloader.py  fetch_and_cache.py  fetch_and_cache_utils.py  generate_crosstabs.py  loaders.py  mysql_wrapper.py  pulse.py  smoothing.py
household_pulse/crosstabs/: county_metro_state.csv  question_mapping.csv  response_mapping.csv
household_pulse/preload_data/: fetch_and_cache.py  fetch_and_cache_utils.py
prod/: etl.py  eviction_data_modelling.py  generate_crosstabs.py  housing_data.py
sql/: create_collectiondates_table.sql  create_pulse_table.sql  create_question_mapping_table.sql  create_response_mapping_table.sql  create_smoothed_table.sql
tests/: county_metro_state.csv  pulse2020_puf_hhwgt_10.csv  pulse_table.csv  question_mapping.csv  response_mapping.csv  test_base.py  test_census.py  test_cli.py  test_downloader.py  test_household_pulse.py  test_io.py  test_mysql_wrapper.py  test_page.txt  test_pulse.py  test_s3.py  test_smoothing.py
(+18 files in other folders)
