[project]
name = "household_pulse"
description = """
    Python package containing functionality to run the ETL
    pipeline that serves the Household Pulse project.
    """
readme = "README.md"
requires-python = ">=3.9"
version = "1.5.0"
authors = [
    {name = "Manuel Martinez", email = "manmart@uchicago.edu"}
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies = {dev = {file = "dev-requirements.txt"}}

[project.urls]
repository = "https://github.com/mansueto-institute/household-pulse"

[tool.setuptools]
packages = ["household_pulse"]

[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project.scripts]
household-pulse = "household_pulse.__main__:main"

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--cov=household_pulse",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--junitxml=coverage-junit.xml",
    "--durations=5"
]